; ModuleID = '/home/carl/AnghaBench/git/extr_mem-pool.c_mem_pool_calloc.c'
source_filename = "/home/carl/AnghaBench/git/extr_mem-pool.c_mem_pool_calloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_pool = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mem_pool_calloc(%struct.mem_pool* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.mem_pool*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store %struct.mem_pool* %0, %struct.mem_pool** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i64 @st_mult(i64 %9, i64 %10)
  store i64 %11, i64* %7, align 8
  %12 = load %struct.mem_pool*, %struct.mem_pool** %4, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i8* @mem_pool_alloc(%struct.mem_pool* %12, i64 %13)
  store i8* %14, i8** %8, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i64, i64* %7, align 8
  %17 = call i32 @memset(i8* %15, i32 0, i64 %16)
  %18 = load i8*, i8** %8, align 8
  ret i8* %18
}

declare dso_local i64 @st_mult(i64, i64) #1

declare dso_local i8* @mem_pool_alloc(%struct.mem_pool*, i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
